--- a/app/scss/globals/boilerplate.scss
+++ b/app/scss/globals/boilerplate.scss
@@ -1,4 +1,6 @@
-* {
+*, 
+*::after,
+*::before {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -6,4 +8,13 @@
 
 html {
     font-size: 100%;
+    scroll-behavior: smooth;
+}
+
+body {
+    font-family: var(--font-inter);
+}
+
+img {
+    display: block;
 }
