--- a/app/scss/globals/boilerplate.scss
+++ b/app/scss/globals/boilerplate.scss
@@ -13,6 +13,8 @@ html {
 
 body {
     font-family: var(--font-inter);
+    background-color: var(--dark-bg);
+    color: var(--dark-white-text);
 }
 
 img {
