--- a/app/scss/components/toggle.scss
+++ b/app/scss/components/toggle.scss
@@ -29,6 +29,10 @@
         margin: 0 -2px 0 0;
         width: rem(20);
         height: rem(20);
+
+        &:focus ~ .toggle__button {
+            border: 2px solid var(--dark-white-text);
+        }
     }
 
     &__background {
@@ -52,6 +56,7 @@
         background-color: var(--dark-card);
         transition: all 150ms ease-in-out;
     }
+
 
     #light:checked ~ .toggle__button {
         left: calc(100% - rem(21));
