--- a/app/scss/globals/colors.scss
+++ b/app/scss/globals/colors.scss
@@ -4,7 +4,7 @@
     --brightred: hsl(356, 69%, 56%);
     --facebook: hsl(208, 92%, 53%);
     --twitter: hsl(203, 89%, 53%);
-    --instagram: linear-gradient(hsl(37, 97%, 70%), hsl(329, 70%, 58%));
+    --instagram: linear-gradient(225deg, hsl(329, 70%, 58%), hsl(37, 97%, 70%));
     --youtube: hsl(348, 97%, 39%);
 
     // Dark Theme
