--- a/app/scss/globals/layout.scss
+++ b/app/scss/globals/layout.scss
@@ -23,3 +23,19 @@
         grid-template-columns: repeat(4, 1fr);
     }
 }
+
+.small-cards {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: rem(30);
+
+    @include breakpoint(medium) {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(4, 1fr);
+    }
+
+    @include breakpoint(large) {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+    }
+}
