--- a/app/scss/globals/typography.scss
+++ b/app/scss/globals/typography.scss
@@ -4,13 +4,22 @@ h1,
 h2,
 h3 {
     margin-top: 0;
+    letter-spacing: 1px;
 }
 
 h1 {
-    font-size: rem(24);
+    font-size: rem(22);
     margin-bottom: rem(3);
-    @include breakpoint(large){
-        font-size: rem(20);
+    @include breakpoint(medium){
+        font-size: rem(26);
+    }
+}
+
+h2 {
+    font-size: rem(20);
+    margin-bottom: rem(22);
+    @include breakpoint(medium){
+        font-size: rem(22);
     }
 }
 
