--- a/app/scss/globals/colors.scss
+++ b/app/scss/globals/colors.scss
@@ -18,6 +18,7 @@
     --dark-bg: hsl(230, 17%, 14%);
     --dark-top-bg: hsl(232, 19%, 15%);
     --dark-card: hsl(228, 28%, 20%);
+    --dark-card-hover: hsl(228, 25%, 27%);
     --dark-blue-text: hsl(228, 34%, 66%);
     --dark-white-text: hsl(0, 0%, 100%);
 
