--- a/app/scss/components/header.scss
+++ b/app/scss/components/header.scss
@@ -12,6 +12,6 @@
     &__subtitle {
         font-size: rem(14);
         font-weight: 700;
-        color: var(--dark-blue-text);
+        color: var(--text-sec);
     }
 }
