--- a/app/scss/globals/typography.scss
+++ b/app/scss/globals/typography.scss
@@ -32,5 +32,5 @@ a:active {
 .big-text{
     font-size: rem(32);
     font-weight: bold;
-    color: var(--dark-white-text);
+    color: var(--text-main);
 }
