--- a/app/scss/components/toggle.scss
+++ b/app/scss/components/toggle.scss
@@ -2,7 +2,7 @@
 
 .toggle {
     border: none;
-    border-top: 2px solid var(--dark-card);
+    border-top: 2px solid var(--card);
     display: flex;
     gap: rem(18);
     justify-content: space-between;
@@ -31,13 +31,13 @@
         height: rem(20);
 
         &:focus ~ .toggle__button {
-            border: 2px solid var(--dark-white-text);
+            border: 2px solid var(--text-main);
         }
     }
 
     &__background {
         display: block;
-        background: linear-gradient(225deg, var(--dark-toggle-end), var(--dark-toggle-start));
+        background: var(--toggle);
         border-radius: rem(12);
         height: 100%;
         width: 100%;
@@ -53,27 +53,17 @@
         width: rem(18);
         height: rem(18);
         border-radius: 50%;
-        background-color: var(--dark-card);
+        background-color: var(--card);
         transition: all 150ms ease-in-out;
     }
-
 
     #light:checked ~ .toggle__button {
         left: calc(100% - rem(21));
     }
 
     label {
-        &[for="dark"] {
-            font-size: rem(14);
-            font-weight: 700;
-            color: var(--dark-white-text);
-        }
-        &[for="light"] {
-            position: absolute;
-            width: 1px;
-            height: 1px;
-            left: -10000px;
-            opacity: 0;
-        }
+        font-size: rem(14);
+        font-weight: 700;
+        color: var(--text-main);
     }
 }
