--- a/app/scss/globals/boilerplate.scss
+++ b/app/scss/globals/boilerplate.scss
@@ -15,8 +15,8 @@ html {
 
 body {
     font-family: var(--font-inter);
-    background-color: var(--dark-bg);
-    color: var(--dark-white-text);
+    background-color: var(--background);
+    color: var(--text-main);
 }
 
 img {
